--- a/nbs/01_langchain_snippets/00_get_data.ipynb
+++ b/nbs/01_langchain_snippets/00_get_data.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| eval: false\n",
     "from langchain.document_loaders import ArxivLoader"
    ]
   },
