--- a/nbs/00_llm_intro/00_intro_to_llms.ipynb
+++ b/nbs/00_llm_intro/00_intro_to_llms.ipynb
@@ -10,15 +10,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| default_exp llms_intro"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -33,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| eval: false\n",
     "import openai\n",
     "import os\n",
     "\n",
@@ -67,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| eval: false\n",
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "    response = openai.ChatCompletion.create(\n",
