--- a/nbs/00_llm_intro/00_intro_to_llms.ipynb
+++ b/nbs/00_llm_intro/00_intro_to_llms.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Guidelines for Prompting\n",
     "\n",
-    "> We will practice two prompting principles and their related tactics in order to write effective prompts for large language models.\n"
+    "> We will practice two prompting principles and their related tactics in order to write effective prompts for large language models.\n",
+    "\n",
+    "- title-block-banner: true"
    ]
   },
   {
@@ -38,9 +40,9 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "_ = load_dotenv(find_dotenv())\n",
+    "# _ = load_dotenv(find_dotenv())\n",
     "\n",
-    "openai.api_key  = os.getenv('OPENAI_API_KEY')"
+    "# openai.api_key  = os.getenv('OPENAI_API_KEY')"
    ]
   },
   {
