--- a/nbs/00_llm_intro/01_intro_to_langchain.ipynb
+++ b/nbs/00_llm_intro/01_intro_to_langchain.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Guidelines for Prompting in Langachain\n",
+    "# Guidelines for Prompting in Langchain\n",
     "\n",
-    "> **Guidelines for Prompting in Langachain**.\n",
+    "> **Guidelines for Prompting in Langchain**.\n",
     "\n",
     "- title-block-banner: true"
    ]
@@ -329,6 +329,163 @@
     "    text=paper_info,\n",
     "    format_output='markdown table'\n",
     "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chains"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "import asyncio\n",
+    "import time\n",
+    "\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "text = \"\"\"\n",
+    "US and Canadian search teams are racing against time to find a tourist submarine that went missing during a dive to the Titanic's wreck on Sunday.\n",
+    "\n",
+    "Five people were onboard when contact with the small sub was lost about an hour and 45 minutes into its dive.\n",
+    "\n",
+    "The rescue operation is continuing overnight in the mid-Atlantic but there has been no sign so far of the vessel.\n",
+    "\n",
+    "Government agencies, both countries' navies and commercial deep-sea firms are all helping the rescue operation.\n",
+    "\"\"\"\n",
+    "\n",
+    "do_whats = [\"summarize\", \"extract NERs\", \"extract keywords\", \"extract key sentences\", \"extract random words starting with 's'\"]\n",
+    "\n",
+    "prompt = PromptTemplate(\n",
+    "    input_variables=[\"do_what\", \"text\"],\n",
+    "    template=\"Please {do_what} the following text: {text}\",\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "llm = OpenAI(temperature=0.9)\n",
+    "chain = LLMChain(llm=llm, prompt=prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nNer: \\nUS, Canadian, search teams, tourist submarine, Sunday, Five people, small sub, mid-Atlantic, government agencies, both countries' navies, commercial deep-sea firms, rescue operation\""
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "chain.run(do_what=\"extract ner\", text=text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doing summarize...\n",
+      "\n",
+      "US and Canadian search teams are actively working to locate a tourist submarine carrying five people that went missing during a dive to the Titanic's wreck on Sunday. So far, no sign of the vessel has been found despite the efforts of government agencies, both countries' navies, and commercial deep-sea firms.\n",
+      "****************************************************************************************************\n",
+      "Doing extract NERs...\n",
+      "\n",
+      "NERs: US, Canadian, tourist, submarine, Titanic, Sunday, Five people, mid-Atlantic, Government agencies, countries' navies, commercial deep-sea firms\n",
+      "****************************************************************************************************\n",
+      "Doing extract keywords...\n",
+      "\n",
+      "Keywords: US, Canadian, search teams, tourist submarine, dive, Titanic's wreck, Sunday, Five people, mid-Atlantic, rescue operation, government agencies, navies, commercial deep-sea firms\n",
+      "****************************************************************************************************\n",
+      "Doing extract key sentences...\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n 1 -r 1\n",
+    "#| eval: false\n",
+    "for do_what in do_whats:\n",
+    "    print(f\"Doing {do_what}...\")\n",
+    "    print(chain.run(do_what=do_what, text=text))\n",
+    "    print(\"*\"*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"\\nSearch teams from the US and Canada are working together in a race against time to locate a tourist submarine that went missing during a dive to the Titanic's wreck on Sunday. There were five people onboard when contact with the sub was lost, and the rescue operation is continuing overnight with the assistance of government agencies, navies, and deep-sea firms. So far, there has been no sign of the vessel.\",\n",
+       " \"\\nNERS: US, Canadian, Sunday, Five, an hour and 45 minutes, mid-Atlantic, government agencies, both countries' navies, commercial deep-sea firms.\",\n",
+       " \"\\n1. Search teams \\n2. Tourist submarine \\n3. Titanic's wreck \\n4. Five people \\n5. Mid-Atlantic \\n6. Rescue operation \\n7. Governments agencies \\n8. Countries' navies \\n9. Commercial deep-sea firms\",\n",
+       " \"\\n1. US and Canadian search teams are racing against time to find a tourist submarine that went missing during a dive to the Titanic's wreck on Sunday.\\n2. Five people were onboard when contact with the small sub was lost about an hour and 45 minutes into its dive.\\n3. Government agencies, both countries' navies and commercial deep-sea firms are all helping the rescue operation.\",\n",
+       " '\\nSearch, Sunday, submarine, signs, rescue, government, navies, commercial, deep-sea']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "tasks = [chain.arun(do_what=do_what, text=text) for do_what in do_whats]\n",
+    "await asyncio.gather(*tasks)"
    ]
   },
   {
