--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -6,53 +6,39 @@
    "source": [
     "# LLM-demo-2-production\n",
     "\n",
-    "> "
+    "> Large Language Models - from Demo to Production"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install"
+    "![imgs/lukasz_robot_scrapping_websites_and_builind_a_dataset_38401eac-e2ab-4faa-96ef-bf6696a9b235.png](imgs/lukasz_robot_scrapping_websites_and_builind_a_dataset_38401eac-e2ab-4faa-96ef-bf6696a9b235.png)\n",
+    "\n",
+    "> generated with Midjourney with prompt `robot_scrapping_websites_and_builind_a_dataset`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```sh\n",
-    "pip install LLM_demo_2_production\n",
-    "```"
+    "## Goal"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use"
+    "In this interactive workshop, we will delve into the fascinating world of large language models and explore their potential in revolutionizing various industries. I will guide participants through the process of transforming cutting-edge demos into scalable production solutions.\n",
+    "\n",
+    "Participants will gain hands-on experience by working on practical exercises that demonstrate how to fine-tune these models for specific tasks. Additionally, we'll cover best practices for deploying these models at scale while maintaining efficiency and performance.\n",
+    "\n",
+    "Throughout the workshop, attendees can expect engaging discussions about ethical considerations surrounding AI usage as well as insights into future developments within the field. By the end of this session, participants should have a solid understanding of how to harness the power of large language models effectively in order to drive innovation across various domains."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Add OpenAI and other API keys."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```sh\n",
-    "export OPENAI_API_KEY=sk-xxx\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
